--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="exercise2_title">2. Color Contrast</string>
     <string name="exercise_favorite_list_title">3. Lists accessibility</string>
     <string name="exercise4_title">4. Form Accessibility</string>
+    <string name="exercise5_title">5. Focus Management</string>
 
     <!-- Main Activity -->
     <string name="main_title">Android Accessibility</string>
@@ -66,5 +67,19 @@
     <string name="login_result_failure">Login failed. Please check your credentials.</string>
     <string name="email_invalid">Email must contain @ symbol</string>
     <string name="password_invalid">Password must be at least 5 characters</string>
+
+    <!-- Exercise 5: Focus Management -->
+    <string name="exercise5_header">Focus Management Exercise</string>
+    <string name="exercise5_description">This exercise demonstrates proper focus management in a complex UI. Users navigating with a keyboard or switch control rely on proper focus order to efficiently interact with the app.</string>
+    <string name="nav_home">Home</string>
+    <string name="nav_dashboard">Dashboard</string>
+    <string name="nav_notifications">Notifications</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
+    <string name="button_1">Button 1</string>
+    <string name="button_2">Button 2</string>
+    <string name="button_3">Button 3</string>
+    <string name="button_4">Button 4</string>
+    <string name="list_of_items">List of items</string>
 
 </resources>
