--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,5 +81,6 @@
     <string name="button_3">Button 3</string>
     <string name="button_4">Button 4</string>
     <string name="list_of_items">List of items</string>
+    <string name="more_actions">More actions</string>
 
 </resources>
