--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="exercise_favorite_list_title">3. Lists accessibility</string>
     <string name="exercise4_title">4. Form Accessibility</string>
     <string name="exercise5_title">5. Focus Management</string>
+    <string name="exercise6_title">6. Accessibility Actions</string>
 
     <!-- Main Activity -->
     <string name="main_title">Android Accessibility</string>
@@ -82,5 +83,10 @@
     <string name="button_4">Button 4</string>
     <string name="list_of_items">List of items</string>
     <string name="more_actions">More actions</string>
+
+    <!-- Exercise 6: Accessibility Actions -->
+    <string name="exercise6_header">Accessibility Actions</string>
+    <string name="add_favorite">Add %1$s to favorites</string>
+    <string name="remove_favorite">Remove %1$s from favorites</string>
 
 </resources>
